cmake_minimum_required(VERSION 3.15)
project(quix-compiler-suite CXX)

if (STRIP_OUTPUT STREQUAL "ON")
  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -s")
endif()

if (BUILD_TESTING)
enable_testing()
endif()

if (CMAKE_BUILD_TYPE STREQUAL "Debug")
  #================== CREATE DEBUG BUILD ==================
  add_subdirectory(libquix-core)
  add_subdirectory(libquix-lexer)
  add_subdirectory(libquix-prep)
  add_subdirectory(libquix-parser)
  add_subdirectory(libquix-qxir)
  add_subdirectory(qpkg)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
  #================= CREATE RELEASE BUILD =================
  add_subdirectory(libquix-core)
  add_subdirectory(libquix-lexer)
  add_subdirectory(libquix-prep)
  add_subdirectory(libquix-parser)
  add_subdirectory(libquix-qxir)
  add_subdirectory(qpkg)
endif()

install(TARGETS qpkg DESTINATION bin)
install(TARGETS quix-core DESTINATION lib)
install(TARGETS quix-lexer DESTINATION lib)
install(TARGETS quix-prep DESTINATION lib)
install(TARGETS quix-parser DESTINATION lib)
install(TARGETS quix-qxir DESTINATION lib)
